// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/widgets/loading/LoadingWrapper showing content with children 1`] = `
<LoadingWrapper
  loading={false}
>
  text
</LoadingWrapper>
`;

exports[`components/widgets/loading/LoadingWrapper showing content without children 1`] = `
<LoadingWrapper
  loading={false}
/>
`;

exports[`components/widgets/loading/LoadingWrapper showing spinner with text 1`] = `
<LoadingWrapper
  loading={true}
  text="test"
>
  <LoadingSpinner
    text="test"
  >
    <span
      className="LoadingSpinner with-text"
      data-testid="loadingSpinner"
      id="loadingSpinner"
    >
      <span
        className="fa fa-spinner fa-fw fa-pulse spinner"
        title="Loading Icon"
      />
      test
    </span>
  </LoadingSpinner>
</LoadingWrapper>
`;

exports[`components/widgets/loading/LoadingWrapper showing spinner without text 1`] = `
<LoadingWrapper
  loading={true}
>
  <LoadingSpinner>
    <span
      className="LoadingSpinner"
      data-testid="loadingSpinner"
      id="loadingSpinner"
    >
      <span
        className="fa fa-spinner fa-fw fa-pulse spinner"
        title="Loading Icon"
      />
    </span>
  </LoadingSpinner>
</LoadingWrapper>
`;
